trying to fix the landing screen on mobile

--- a/start.css
+++ b/start.css
@@ -32,7 +32,7 @@ a{
 
 #section1{
     height: 500px;
-    width: 360px;
+    max-width: 360px;
     padding: 8px;
     margin-left: auto;
     margin-right: auto;
